<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Video Player</string>
    <string name="queue">Queue</string>
    <string name="library">Library</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_marker">Start marker</string>
    <string name="end_marker">End marker</string>
    <string name="rewind">Rewind</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="ffwd">Fast forward</string>
    <string name="start_label">Start:</string>
    <string name="end_label">End:</string>
    <string name="progress_dialog_loading">Loading...</string>
    <string name="time_seconds">seconds</string>
    <string name="hint_choose_song_by_random">Play randomly a song in your library</string>
    <string name="song_piece_header">Songs</string>
    <string name="title_playlist_suggest">Recent</string>
    <string name="hint_playlist_suggested">You might love that songs</string>
    <string name="main_screen_album_header">Albums</string>
    <string name="hint_playlist_showing">Play all songs in album</string>
    <string name="app_title">Music</string>
    <string name="title_activity_slider">Slider</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="trade_mark">Music ®</string>
    <string name="count_song"><xliff:g id="count">%d</xliff:g> song</string>
    <string name="count_songs"><xliff:g id="count">%d</xliff:g> songs</string>
    <string name="count_album"><xliff:g id="count">%d</xliff:g> album</string>
    <string name="count_albums"><xliff:g id="count">%d</xliff:g> albums</string>
    <string name="count_artist"><xliff:g id="count">%d</xliff:g> artist</string>
    <string name="count_artists"><xliff:g id="count">%d</xliff:g> artists</string>
    <string name="number_song_add_queue"><xliff:g example="1" id="number">%d</xliff:g> song added to the queue.</string>
    <string name="number_songs_add_queue"><xliff:g example="1" id="number">%d</xliff:g> songs added to the queue.</string>
    <string name="number_song_add_playlist"><xliff:g example="1" id="number">%d</xliff:g> song added to playlist.</string>
    <string name="number_songs_add_playlist"><xliff:g example="1" id="number">%d</xliff:g> songs added to playlist.</string>
    <string name="combine_two_strings" translatable="false">%1$s | %2$s</string>
    <string name="duration_format" translatable="false"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
    <string name="durationformatshort" translatable="false"><xliff:g id="format">%2$d:%3$02d</xliff:g></string>
    <string name="durationformatlong" translatable="false"><xliff:g id="format">%1$d:%2$02d:%3$02d</xliff:g></string>
    <string name="playlist_last_added">Last Added</string>
    <string name="playlist_recently_played">Recently Played</string>
    <string name="playlist_top_tracks">My Top Tracks</string>
    <string name="this_is_name_of_the_song">This Is Name Of The Song</string>
    <string name="the_name_of_the_song">The Name Of The Song</string>
    <string name="the_artist_of_the_song">The Artist Of The Song</string>
    <string name="this_is_artist_of_the_song">This Is Artist Of The Song</string>
    <string name="error_playing_track">Error Playing Track</string>
    <string name="no_equalizer">No equalizer found.</string>
    <string name="no_audio_ID">"Play a song first, then try again."</string>
    <string name="accessibility_play">Play</string>
    <string name="accessibility_pause">Pause</string>
    <string name="accessibility_next">Next</string>
    <string name="accessibility_prev">Previous</string>
    <string name="accessibility_shuffle">Shuffle</string>
    <string name="accessibility_shuffle_all">Shuffle all</string>
    <string name="accessibility_repeat">Repeat</string>
    <string name="accessibility_repeat_all">Repeat all</string>
    <string name="accessibility_repeat_one">Repeat one</string>
    <string name="accessibility_queue">Open queue</string>
    <string name="accessibility_browse">Browse music</string>
    <string name="menu_sort_by">Sort by</string>
    <string name="sort_order_entry_az">A-Z</string>
    <string name="sort_order_entry_za">Z-A</string>
    <string name="sort_order_entry_artist">Artist</string>
    <string name="sort_order_entry_album">Album</string>
    <string name="sort_order_entry_year">Year</string>
    <string name="sort_order_entry_track_number">Track Number</string>
    <string name="sort_order_entry_duration">Duration</string>
    <string name="sort_order_entry_date_added">Date added</string>
    <string name="sort_order_entry_track_list">Track list</string>
    <string name="sort_order_entry_number_of_songs">Number of songs</string>
    <string name="sort_order_entry_number_of_albums">Number of albums</string>
    <string name="sort_order_entry_filename">Filename</string>
    <string name="saved_playlist_to">Saved playlist to %s.</string>
    <string name="failed_to_save_playlist">Failed to save playlist (%s).</string>
    <string name="saved_x_playlists_to_x">Saved %1$d playlists to %2$s.</string>
    <string name="timber_source">Report any bugs <u> here </u> </string>
    <string name="timber_feature_request">Specify any feature request in the Google+ community <u> here </u></string>
    <string name="dialog_ringtone_title">Set ringtone</string>
    <string name="dialog_ringtone_message">Allow app to modify audio settings</string>
    <string name="menu_show_as">View As</string>
    <string name="menu_show_as_entry_list">List</string>
    <string name="menu_show_as_entry_grid">Grid</string>
    <string name="menu_show_as_entry_default">Default</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="black">Black</string>
    <string name="last_opened">Last Opened</string>
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="playlists">Playlists</string>
    <string name="playing_queue">Playing Queue</string>
    <string name="now_playing">Now Playing</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="help_and_feedback">Help and Feedback</string>
    <string name="search">Search</string>
    <string name="action_shuffle_all">Shuffle All</string>
    <string name="action_equalizer">Equalizer</string>
    <string name="search_library">Search Library</string>
    <string name="select_theme">Select Theme</string>
    <string name="choose_theme_throughout">Choose a theme to be used throughout the app.</string>
    <string name="choose_start_page">Choose the start page to be displayed on launch.</string>
    <string name="start_page">Start page</string>
    <string name="artist_in_grid">Artists in Grid</string>
    <string name="toggle_artists_grid">Toggle for displaying artists in a 2x2 grid.</string>
    <string name="toggle_system_animations">Toggle for system animations throughout the app.</string>
    <string name="system_animations">System animations</string>
    <string name="toggle_animations">Toggle for Transition animation throughout the app.</string>
    <string name="animations">Animations</string>
    <string name="now_playing_selector">Choose a now playing screen from 4 different styles.</string>
    <string name="personalisation">Personalisation</string>
    <string name="other">Other</string>
    <string name="advanced">Advanced</string>
    <string name="timber_about_opensource">Timber is a open source Music Player developed by Naman Dwivedi.</string>
    <string name="summary_pause_detach">Toggle for pausing playback when headphone is detached</string>
    <string name="pause_detach">Pause on Detach</string>
    <string name="summary_xposed_trackselector">Requires Xposed and XMediaNotificationTrackSelector Xposed module to be installed. This will provide access to playing queue from the notification bar itself.</string>
    <string name="xposed_trackselector">Playing queue support in notification</string>
    <string name="currently_selected">Currently Selected</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="dark_theme_summary">Apply a dark theme throughout the app</string>
    <string name="primary_color">Primary Color</string>
    <string name="primary_color_summary">Change the primary theme color</string>
    <string name="accent_color">Accent Color</string>
    <string name="accent_color_summary">Change the accent theme color</string>
    <string name="colored_status_bar">Colored Status Bar</string>
    <string name="colored_status_bar_summary">Toggle status bar coloring</string>
    <string name="colored_nav_bar">Colored Navigation Bar</string>
    <string name="colored_nav_bar_summary">Toggle navigation bar coloring</string>
    <string name="albumart_lockscreen">Lockscreen</string>
    <string name="albumart_lockscreen_summary">Show album art in lockscreen</string>
    <string name="load_artist_image">Load artist images</string>
    <string name="load_artist_image_summary">Load artist images from lastfm</string>
    <string name="load_artist_image_mobile">Load artist images on mobile data</string>
    <string name="load_artist_image_mobile_summary">Load artist images even if there is no wifi</string>
    <string name="gestures">Gestures</string>
    <string name="switching_tracks_by_gestures">Switching tracks using gestures</string>
    <string name="widget_standard">Timber standard widget</string>
    <string name="widget_small">Timber small widget</string>
    <string name="tap_to_start">Tap to start Timber</string>
    <string name="widget_white">Timber light widget</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="go_to_album">Go to album</string>
    <string name="go_to_artist">Go to artist</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="play_next">Play next</string>
    <string name="new_playlist">New playlist</string>
    <string name="nothing_found">Nothing found</string>
    <string name="folders">Folders</string>
    <string name="select_storage">Select storage</string>
    <string name="cancel">Cancel</string>
    <string name="language">Language</string>
    <string name="exit_dialog_title">Are you sure?</string>
    <string name="exit_dialog_message">Exiting the app will stop the radio. Press MINIMIZE to play in background.</string>
    <string name="exit_positive_button">exit</string>
    <string name="exit_negative_button">minimize</string>
    <string name="nc_dialog_title">No Connectivity!</string>
    <string name="nc_dialog_message">Please check your internet connection and try again.</string>
    <string name="nc_dialog_button">try again</string>
    <string name="apply_search_filter">Apply Search Filter</string>
    <string name="apply">apply</string>
    <string name="country">Country</string>
    <string name="genre">Genre</string>
    <string name="select_language">Select Language</string>
    <string name="select_genre">Select Genre</string>
    <string name="select_country">Select Country</string>
    <string name="leave_us_a_feedback">Leave us a feedback</string>
    <string name="email">Email</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>
    <string name="report_title">Royal FM Radio</string>
    <string name="report_msg">Your report will be sent for review. Press CANCEL to abort.</string>
</resources>