<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="25dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/searchFilterTv"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply_search_filter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textView2"
                android:textColor="@color/black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/language"
                app:layout_constraintEnd_toStartOf="@+id/rlLanguage"
                app:layout_constraintStart_toStartOf="@+id/searchFilterTv"
                app:layout_constraintTop_toBottomOf="@+id/searchFilterTv" />

            <RelativeLayout
                android:id="@+id/rlLanguage"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="@drawable/border_spinner"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView2">

                <Spinner
                    android:textColor="@color/black"
                    android:id="@+id/spinnerLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:prompt="@string/select_language" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_arrowspinner" />

            </RelativeLayout>


            <TextView
                android:id="@+id/textView5"
                android:textColor="@color/black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/genre"
                app:layout_constraintEnd_toStartOf="@+id/rlGenre"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <RelativeLayout
                android:id="@+id/rlGenre"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="@drawable/border_spinner"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView5">

                <Spinner
                    android:textColor="@color/black"
                    android:id="@+id/spinnerGenre"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:prompt="@string/select_genre" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_arrowspinner" />

            </RelativeLayout>



            <TextView
                android:id="@+id/textView6"
                android:textColor="@color/black"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/country"
                app:layout_constraintEnd_toStartOf="@+id/rlCountry"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <RelativeLayout
                android:id="@+id/rlCountry"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="@drawable/border_spinner"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView6">

                <Spinner
                    android:id="@+id/spinnerCountry"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:prompt="@string/select_country"
                    android:textColor="@color/black" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_arrowspinner" />

            </RelativeLayout>



            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/apply"
                app:backgroundTint="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rlCountry" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/cancel"
                android:textColor="@color/colorGrey"
                app:layout_constraintBottom_toBottomOf="@+id/btn_apply"
                app:layout_constraintEnd_toStartOf="@+id/btn_apply"
                app:layout_constraintTop_toTopOf="@+id/btn_apply" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>
