<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="com.statusmaker_photoeditor_music.videoplayer.radio.utils.NoConnectivityDialog"/>
    </data>

    <RelativeLayout
        android:id="@+id/no_connectivity_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_centerInParent="true">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                />
            <TextView
                style="@style/TextAppearance.MdcTypographyStyles.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nc_dialog_title"
                android:layout_margin="8dp"
                android:textColor="@color/colorPrimaryDarkShadeDisabled"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.MdcTypographyStyles.Caption"
                android:textColor="@color/colorGrey"
                android:text="@string/nc_dialog_message"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_retry"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:strokeWidth="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nc_dialog_button"
                android:layout_margin="24dp"
                />
        </LinearLayout>
    </RelativeLayout>
</layout>
